# mpr-gcloud-data

./: .gitignore  README.md  jobRunner.ipynb  mpr-research-predictor.ipynb  mpr-research-trainer.ipynb  setup.cfg  tokenizerMaker.ipynb
src/trainer/: task.py
