[options]

package_dir =
    = src
python_requires = >=3.7
packages = find:

install_requires =
    transformers == 4.19
    datasets == 2.2
    torch == 1.11
    tqdm == 4.64
    openpyxl == 3.0
    cloudml-hypertune == 0.1.0.dev6


include_package_data = True

[options.packages.find]
where = src

[metadata]
name = mpr-research-trainer
version = 0.0.3
# author = Kapotaksha
# author_email = takposha@umich.edu
description = Used to train and tune MWrite data using PeerBERT
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
